[package]
name = "healthcheck-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

hyper = { version = "=0.14.28", features = ["server", "http1"] }


prometheus = "0.13"
lazy_static = "1"

reqwest = { version = "0.13", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"
humantime = "2"



